# vosk-language-server

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  deployqt.bat  deployqt6.bat  main.cpp
include/: application.h  microphoneaudiodevice.h  recorder.h  vls_common.h
lib/: libvosk.lib
resources/: resources.qrc  style.css  winresources.rc
src/: application.cpp  application.ui  asr_server.cpp  microphoneaudiodevice.cpp  recorder.cpp  vls_common.cpp
